# elli-billing-tool

./: .env.example  .gitignore  .releaserc.json  CHANGELOG.md  README.md  elli-billing-tool.spec  pyproject.toml  requirements.txt  run.bat  run.sh  settings.json.example
.github/workflows/: release.yml
docs/: HOWTO.md
src/elli_billing_tool/: __init__.py  __main__.py  cli.py  config.py  elli_service.py  mail_generator.py  pdf_generator.py  pdf_parser.py
template/: mail.txt
